<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">СМСка</string>
    <string name="list_phone_prev">Список блок-номеров пуст</string>
    <string name="story_phone_prev">Обработанные вызовы отсутствуют</string>
    <string name="list_phone_title">Список блок-номеров</string>
    <string name="add_phone_title">Добавить номер телефона</string>
    <string name="story_phone_title">История обработанных вызовов</string>
    <string name="options_title">Настройки программы</string>
    <string name="hint_phone_number">Номер</string>
    <string name="hint_phone_name">Имя</string>
    <string name="hint_sms">СМС-сообщение</string>
    <string name="do_">До</string>
    <string name="hint_time">Время</string>
    <string name="add_button_text">Добавить</string>
    <string name="delete_button_text">Удалить</string>
    <string name="edit_button_text">Изменить</string>
    <string name="add_from_contacts">Добавить из меню Контакты</string>
    <string name="delete">Удалить</string>
    <string name="delete_all_text">Удалить все</string>
    <string name="time_block_phone_text">Время блокировки вызова</string>
    <string name="time_block_sms_text">Время отправки сообщения</string>
    <string name="block_text">Изменить статус блокировки</string>
    <string name="block_on_text">Блокировка включена</string>
    <string name="block_off_text">Блокировка отключена</string>
    <string name="users_manual">Подсказки</string>
    <string name="users_body_manual">1. Стандартный мобильный номер телефона вводится следующим образом: +&lt;телефонный код страны&gt;&lt;номер телефона&gt;, короткие номера вводятся по умолчанию;"\n"2. Если сохранить номера телефонов без привязанных сообщений, то программа будет просто блокировать входящие вызовы без отправки СМС-сообщения;"\n"3. Для удаления истории обработанных вызовов необходимо удерживать любой пункт списка, затем нажать появившийся пункт меню;"\n"4. Для удаления отдельных записей небходимо нажать на значок корзины;"\n"5. Каждую запись в списке номеров можно пометить для блокировки (по умолчанию номера блокируются) с помощью пункта в контекстном меню.</string>
    <string name="about_text">О программе</string>
    <string name="about_body_text">Приложение разработал МИКРЮКОВ ВИКТОР, Россия.</string>
    <string name="block_on_notif">блокировка включена</string>
    <string name="block_off_notif">блокировка отключена</string>
    <string name="status_notif">Приложение запущено</string>
    <string name="alert_error_title">Уведомление"</string>
    <string name="alert_error_body">Приложение не работает на данной версии Android. Для работы с приложением пожалуйста используйте другую версию ОС.</string>
    <string name="navigation_listphones">Номера</string>
    <string name="navigation_addphone">Добавить номер</string>
    <string name="navigation_storyphones">История</string>
    <string name="navigation_options">Настройки</string>
    <string name="toast_clean_story">История вызовов очищена</string>
    <string name="toast_reset_call">Входящий вызов отклонен</string>
    <string name="toast_send_sms">Сообщение отправлено</string>
    <string name="toast_error_base">Номера уже присутствуют в базе!</string>
    <string name="toast_error_input">Введите хотя бы один номер телефона!</string>
    <string name="toast_empty_mess">&lt;пустое сообщение&gt;</string>
    <string name="select_time">Выберите время</string>
    <string name="time">с</string>
    <string name="current_time_text">Текущее время:</string>
</resources>